<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.levishowwedance.Controlador.PhotoActivity">

    <ImageView android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:src="@drawable/rsz_no_photo_big"
        android:layout_margin="16dp"
        android:padding="22dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_title"
        style="@style/EditTextHintNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title">
        <EditText android:id="@+id/edit_title"
            style="@style/Text_Edit"
            android:hint="@string/titulo"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_date"
        style="@style/EditTextHintNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_title">
        <EditText android:id="@+id/edit_date"
            style="@style/Text_Edit"
            android:drawableRight="@drawable/rsz_ic_date_range_black_48dp"
            android:hint="@string/date"
            android:inputType="date"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_location"
        style="@style/EditTextHintNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_date">
        <EditText android:id="@+id/edit_location"
            style="@style/Text_Edit"
            android:drawableRight="@drawable/rsz_ic_location_on_black_48dp"
            android:hint="@string/location"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <Button android:id="@+id/button_upload"
        style="@style/button"
        android:layout_below="@id/input_layout_location"
        android:text="@string/button_photo"
        android:onClick="upload"/>

</RelativeLayout>
